# turret

./: Cargo.toml  README.md
firmware/: Cargo.toml
firmware/models/: distracted.py
firmware/src/: lib.rs  main.rs  server.rs  turret.rs
firmware/src/server/: service.rs
firmware/src/turret/: motor.rs
firmware/test_scripts/: add_two_nums.py
frontend/: 404.html  index.html  wegood.html  wenotgood.html
