[package]
name = "firmware"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
futures = { version = "0.3.30", features = ["executor"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-tungstenite = "0.14.0"
hyper-util = { version = "0.1.7", features = ["tokio", "full"] }
image = "0.25.5"
rppal = "0.19.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
v4l = "0.14.0"


[lints]
workspace = true
